Andromeda-annulus-calc-10599322-error.log
srun: error: ioctl(TIOCGWINSZ): Inappropriate ioctl for device
srun: error: Not using a pseudo-terminal, disregarding --pty option
bash: cannot set terminal process group (-1): Inappropriate ioctl for device
bash: no job control in this shell
]0;amani@compute-252: /idia/projects/uct-mega-hi/m31/RM/RM_amani/MASTERS_starter_kit/GitStuff/Andromeda-Ionized-CGM[01;32mamani@compute-252[00m:[01;34m/idia/projects/uct-mega-hi/m31/RM/RM_amani/MASTERS_starter_kit/GitStuff/Andromeda-Ionized-CGM[00m$ exit
  File "M31_signal_vs_entire_sky.py", line 659
    if args.--show_dispersion: #show patches on spehre as they get smaller
            ^
SyntaxError: invalid syntax
